# protocols

./: .env.prod.example  .gitignore  Makefile  README.md  package-lock.json  space_app.py
backend/: Dockerfile  Dockerfile.ml  Dockerfile.prod  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: deps.py
backend/app/api/v1/routes/: auth.py  jobs.py  sessions.py  translate.py
backend/app/api/v1/schemas/: __init__.py  auth.py  jobs.py  sessions.py
backend/app/bot/: __main__.py  api_client.py  handlers.py  i18n.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: models.py  seed.py  session.py  sync_session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_remove_sign_fields.py  0003_add_asr_provider.py  0004_add_session_audio_key.py  0005_add_viewer_token.py  0006_add_friendly_id.py  0007_add_segment_translations.py  (+3 more)
backend/app/services/asr/: hf_inference.py  hf_space.py  kazakh_glossary.py  openai_asr.py  whisper_service.py
backend/app/services/diarization/: online.py  pyannote_service.py
backend/app/services/export/: __init__.py  docx_.py  formatting.py  html_template.py  markdown_convert.py  pdf.py  plain.py  renderer.py  subtitles.py
backend/app/services/pipeline/: offline.py
backend/app/services/preprocessing/: denoise.py  normalize.py  vad.py
backend/app/services/qa/: __init__.py
backend/app/services/summarization/: insights.py  llm_service.py  prompts.py  protocol_generator.py  schemas.py  templates.py  translator.py
backend/app/workers/: celery_app.py  tasks.py
backend/app/ws/: audio_handler.py  openai_bridge.py  routes.py  session_manager.py
backend/tests/: test_export.py  test_health.py  test_pipeline_align.py  test_summarization.py
(+65 files in other folders)
